feat: list urls route

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <title>Url Shorten</title>
-  </head>
-  <body>
-    <noscript>É necessário ativar o javascript para rodar esta aplicação</noscript>
-    <div id="root"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <title>Url Shorten</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Mono&display=swap" rel="stylesheet">
+</head>
+
+<body>
+  <noscript>É necessário ativar o javascript para rodar esta aplicação</noscript>
+  <div id="root"></div>
+</body>
+
 </html>
